# qa_guru_python_10_21

./: .env.bstack  .env.example  .env.local_emulator  .env.local_real  .gitignore  README.md  project.py  pyproject.toml
browserstack_test/pages/: main_page.py
tests/: conftest.py
tests/android/: conftest.py
tests/android_app/: conftest.py  test_wiki_mobile.py  test_wiki_mobile_search.py
tests/ios_app/: test_search_ios.py
utils/: attach.py  path.py
